[package]
name = "spirt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shader-focused IR to target, transform and translate from."

[dependencies]
arrayvec = "0.7.1"
elsa = { version = "1.4.0", features = ["indexmap"] }
format = "0.2.4"
indexmap = "1.7.0"
lazy_static = "1.4.0"
owning_ref = "0.4.1"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.7.0", features = ["serde", "union"] }
