[package]
name = "spirt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shader-focused IR to target, transform and translate from."

[dependencies]
arrayvec = "0.7.1"
bytemuck = "1.12.3"
elsa = { version = "1.6.0", features = ["indexmap"] }
indexmap = "1.7.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.7.0", features = ["serde", "union"] }
