[package]
name = "spirt"
description = "Shader-focused IR to target, transform and translate from."
repository = "https://github.com/EmbarkStudios/spirt"
homepage = "https://github.com/EmbarkStudios/spirt"
version = "0.3.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
# FIXME(eddyb) should this point to the version built from `git`?
documentation = "https://docs.rs/spirt"
keywords = ["shader", "spir-v", "spirv", "ir", "compiler"]
categories = [
    "compilers",

    # FIXME(eddyb) `spirv-tools-sys` uses this but should it?
    "rendering::data-formats"
]
exclude = [".github", "release.toml", "tests/data"]

[dependencies]
arrayvec = "0.7.1"
bytemuck = "1.12.3"
derive_more = "0.99.17"
elsa = { version = "1.6.0", features = ["indexmap"] }
indexmap = "2.0.0"
internal-iterator = "0.2.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
longest-increasing-subsequence = "0.1.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.7.0", features = ["serde", "union"] }

[dev-dependencies]
naga = { version = "0.19", features = ["wgsl-in", "spv-out"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items"]
